# cdinit

./: CMakeLists.txt  Makefile  README.md  package.xml
.github/workflows/: main.yml
cdinit/: CMakeLists.txt  Makefile  package.xml
cdinit/cdinit/include/: process_required
cdinit/cdinit/service/: cdinit_execution_profile  cdinit_log_follow  cdinit_print_env  cdinit_timeout
cdinit/cdinit_services/: cdinit_log  cdinit_shutdown_debug
cdinit/scripts/: cdinit.sh  cdinit_graph.py
cdinit_examples/: CMakeLists.txt  package.xml
cdinit_examples/cdinit_services/: cdinit_shutdown  cdinit_timeout
cdinit_manager/: CMakeLists.txt  package.xml
cdinit_manager/cdinit_services/: cdinit_log  cdinit_sessionsync  cdinit_shutdown  cdinit_timeout
cdinit_manager/scripts/: cdinit.sh  cdinit_ctl.sh  cdinit_graph.py  cdinit_launch.sh  cdinit_log_helper.sh
cdinit_ros2/: CMakeLists.txt  package.xml
cdinit_ros2/cdinit/service/: cdinit_ros2_bag  cdinit_ros2_main
cdinit_ros2/cdinit_services/: cdinit_ros2_bag
cdinit_ros2/config/: mcap_bag.yaml
dinit/src/: options-processing.cc  service.cc
dinit_services/: timeout
examples/: roscore  setup
examples/b/: shutdown
scripts/: bringup.sh  ctl.sh  launch.sh
