<?xml version="1.0"?>
<package format="2">
    <name>cdinit_manager</name>
    <version>0.3.0</version>
    <description>cdinit management scripts</description>
    <maintainer email="asherikov@yandex.com">Alexander Sherikov</maintainer>
    <license>Apache 2.0</license>

    <export>
        <build_type>cmake</build_type>
    </export>

    <buildtool_depend>cmake</buildtool_depend>

    <exec_depend>cdinit</exec_depend>
</package>
