<?xml version="1.0"?>
<package format="2">
    <name>cdinit_ros2</name>
    <version>0.3.0</version>
    <description>cdinit ros2</description>
    <maintainer email="asherikov@yandex.com">Alexander Sherikov</maintainer>
    <license>Apache 2.0</license>

    <export>
        <build_type>cmake</build_type>
    </export>

    <buildtool_depend>cmake</buildtool_depend>

    <exec_depend>cdinit_manager</exec_depend>
    <exec_depend>ros2bag</exec_depend>
    <exec_depend>rosbag2_storage_mcap</exec_depend>
</package>
